@@ -1,5 +1,6 @@
 # Release 4.x.x
 
+- Add `reveal_type`. Backport from bpo-46414.
 - Runtime support for PEP 681 and `typing_extensions.dataclass_transform`.
 - `Annotated` can now wrap `ClassVar` and `Final`. Backport from
   bpo-46491. Patch by Gregory Beauregard (@GBeauregard).
